Fix alignment to username on the right side as well

--- a/resources/assets/less/bem/osu-nav.less
+++ b/resources/assets/less/bem/osu-nav.less
@@ -47,7 +47,7 @@
   &__title-menu {
     position: absolute;
     left: (-@spacing / 2);
-    top: 0;
+    top: (@spacing / 2);
     width: 100%;
     display: flex;
   }
